# stableart-comfyui-node

./: .comfyignore  .gitignore  AGENTS.md  LICENSE  PUBLISHING.md  README.md  __init__.py  config.example.toml  pyproject.toml  requirements.txt
.github/workflows/: publish-comfy-registry.yml
comfyui_job_plugin/: __init__.py  broker_client.py  comfy_api.py  config.py  gpu.py  logging_util.py  models.py  runtime.py  server_ready.py  urls.py  version.py
comfyui_job_plugin/jobs/: __init__.py  handlers.py  schemas.py
comfyui_job_plugin/workflows/: __init__.py  caption.py  checkpoints.py  image.py  loader.py
comfyui_job_plugin/workflows/data/: ai-caption.json  checkpoint-image-diffusion.json  checkpoint-image.json  nova-anime-xl.json  upscale-image.json
tests/: test_backoff.py  test_caption.py  test_checkpoints.py  test_comfy_api.py  test_config.py  test_image_workflow.py  test_models.py  test_schemas.py  test_urls.py  test_workflow_patch.py
web/: job_plugin.js
