[project]
name = "stableart-comfyui-node"
# Keep in sync with comfyui_job_plugin/version.py __version__ (reported to the dashboard).
version = "0.2.2"
description = "StableArt GPU worker as a ComfyUI custom node: connects to the StableArt node broker and runs image-generation and ai-caption jobs on the local ComfyUI."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: GPU",
]
dependencies = [
    "websocket-client>=1.7",
    "requests>=2.31",
    # tomllib is stdlib on 3.11+; backport for 3.10.
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/tomny-dev/stableart-comfyui-node"

# ComfyUI-Manager / ComfyUI Registry metadata. See
# https://docs.comfy.org/registry/publishing
# Publisher "stableart" on registry.comfy.org; node id = [project] name.
[tool.comfy]
PublisherId = "stableart"
DisplayName = "StableArt Job Node"
Icon = ""

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# The importable package tree; the top-level __init__.py is the ComfyUI
# entrypoint. List subpackages explicitly so a wheel / non-editable install
# includes comfyui_job_plugin.jobs and .workflows (omitting them breaks import).
packages = [
    "comfyui_job_plugin",
    "comfyui_job_plugin.jobs",
    "comfyui_job_plugin.workflows",
]

[tool.setuptools.package-data]
comfyui_job_plugin = ["workflows/data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
